--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Coffeeroasters</title>
 <link rel="stylesheet" href="./style.css">
+<a href="./frug.html">ab</a>
 </head>
 
 <body>
